...

        addItem(NSMenuItem.separator())

        addItem(withTitle: UserText.findInPageMenuItem, action: tabViewModel.canFindInPage ? #selector(findInPage(_:)) : nil, keyEquivalent: "f")
            .targetting(self)
            .withImage(moreOptionsMenuIconsProvider.findInPageIcon)
            .withAccessibilityIdentifier("MoreOptionsMenu.findInPage")

        let shareItem = addItem(withTitle: UserText.shareMenuItem, action: nil, keyEquivalent: "")
            .targetting(self)
            .withImage(moreOptionsMenuIconsProvider.shareIcon)
            .withSubmenu(sharingMenu)
        shareItem.isEnabled = tabViewModel.canShare
...
