...
        bookmarkListButton.delegate = self
        bookmarkListButton.setAccessibilityIdentifier("NavigationBarViewController.bookmarkListButton")
        bookmarkListButton.setAccessibilityTitle(UserText.bookmarksShortcutTooltip)
        bookmarkListButton.toolTip = UserText.bookmarksShortcutTooltip

        optionsButton.sendAction(on: .leftMouseDown)
        optionsButton.setAccessibilityIdentifier("NavigationBarViewController.optionsButton")
        optionsButton.setAccessibilityTitle(UserText.applicationMenuTooltip)
        optionsButton.toolTip = UserText.applicationMenuTooltip

        setupNavigationButtonIcons()
        setupNavigationButtonColors()
        setupNavigationButtonsSize()
...
